--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -397,7 +397,7 @@ sudo make install
     <td>Получить данные из указанной команды N. Например, <code>$custom0$</code>.</td>
   </tr>
   <tr>
-    <th rowspan="3">Desktop label</th>
+    <th rowspan="3">Рабочий стол</th>
     <td><code>$desktop$</code></td>
     <td>Имя текущего рабочего стола.</td>
   </tr>
