--- a/devs/netctl-gui-dbus-api.html
+++ b/devs/netctl-gui-dbus-api.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -21,24 +22,24 @@ th.sub {
   font-style: italic;
   font-weight: normal;
 }
+small {
+  font-size: 70%;
+}
     </style>
-      <h1>netctl-gui DBus API description</h1>
-      <h3>Project version : 1.3.0</h3>
-      <ol>
-        <li><a href="#api">DBus API</a></li>
-        <li><a href="#helper">Helper API</a></li>
-        <ul>
-          <li><a href="#ctrl">Helper ctrl API</a></li>
-          <li><a href="#netctl">Helper netctl API</a></li>
-        </ul>
-        <li><a href="#gui">GUI API</a></li>
-        <ul>
-          <li><a href="#netctlgui">GUI netctlgui API</a></li>
-        </ul>
-        <li><a href="#links">External links</a></li>
-      </ol>
   </head>
   <body>
+
+<h1>netctl-gui DBus API description</h1>
+<h3>Project version : 1.3.1</h3>
+<ol>
+  <li><a href="#api">DBus API</a></li>
+  <li><a href="#helper">Helper API</a></li>
+  <li><a href="#ctrl">Helper ctrl API</a></li>
+  <li><a href="#netctl">Helper netctl API</a></li>
+  <li><a href="#gui">GUI API</a></li>
+  <li><a href="#netctlgui">GUI netctlgui API</a></li>
+  <li><a href="#links">External links</a></li>
+</ol>
 
 <h2><a href="#api" class="anchor" id="api"></a>DBus API</h2>
 <table>
@@ -371,10 +372,10 @@ th.sub {
   <li><a href="https://github.com/arcan1s/netctl-gui/issues">Bugtracker</a></li>
 </ul>
 
-<p align="center" style="font-size: 70%">
+<small>
   &copy; 2014-2014 <a href="mailto:esalexeev@gmail.com">Evgeniy Alekseev</a><br>
   This software is licensed under GPLv3
-</p>
+</small>
 
   </body>
 </html>
