--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -91,7 +91,7 @@ sudo make install
 <h3><a href="#tips" class="anchor" id="tips"><span class="octicon octicon-link"></span></a>Tips & tricks</h3>
 <p>Вы можете использовать различные цвета в полях. Просто вставьте нужный текст в html код. Смотри <a href="https://github.com/arcan1s/awesome-widgets/issues/9" title="GitHub">вопрос</a> для более подробной информации.</p>
 
-<p>Нумерация элементов в полях температура, использование HDD, скорость HDD, температура HDD ссылается на порядок элементов во второй вкладке (<i>Расширенные настройки</i>). Вы должны сначала выделить требуемые элементы в нужном listWidget. И первый выделенный элемент в listWdiget будет связан c <code>$tag0$</code>. Смотри <a href="https://github.com/arcan1s/awesome-widgets/issues/17" title="GitHub">вопрос</a> для более подробной информации.</p>
+<p>Нумерация элементов в полях температура, использование HDD, скорость HDD, температура HDD ссылается на порядок элементов во второй вкладке (<i>Расширенные настройки</i>). Вы должны сначала выделить требуемые элементы в нужном listWidget. И первый выделенный элемент в listWdiget будет связан c <code>$tag0</code>. Смотри <a href="https://github.com/arcan1s/awesome-widgets/issues/17" title="GitHub">вопрос</a> для более подробной информации.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
@@ -160,253 +160,253 @@ sudo make install
 <table>
   <tr>
     <th rowspan="5">Время</th>
-    <td><code>$time$</code></td>
+    <td><code>$time</code></td>
     <td>Время в стандартном формате. Например, <code>fri Nov 6 04:48:01 2013</code>.</td>
   </tr>
   <tr>
-    <td><code>$isotime$</code></td>
+    <td><code>$isotime</code></td>
     <td>Время в формате ISO.</td>
   </tr>
   <tr>
-    <td><code>$shorttime$</code></td>
+    <td><code>$shorttime</code></td>
     <td>Время в коротком формате локали.</td>
   </tr>
   <tr>
-    <td><code>$longtime$</code></td>
+    <td><code>$longtime</code></td>
     <td>Время в длинном формате локали.</td>
   </tr>
   <tr>
-    <td><code>$ctime$</code></td>
+    <td><code>$ctime</code></td>
     <td>Cпециальный формат времени.</td>
   </tr>
   <tr>
     <th rowspan="2">Время работы</th>
-    <td><code>$uptime$</code></td>
+    <td><code>$uptime</code></td>
     <td>Системный аптайм, <code>---d--h--m</code>.</td>
   </tr>
   <tr>
-    <td><code>$cuptime$</code></td>
+    <td><code>$cuptime</code></td>
     <td>Cпециальный формат аптайма.</td>
   </tr>
   <tr>
     <th rowspan="2">CPU</th>
-    <td><code>$cpu$</code></td>
+    <td><code>$cpu</code></td>
     <td>Полная загрузка CPU, %, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$cpuN$</code></td>
+    <td><code>$cpuN</code></td>
     <td>Загрузка CPU для ядра N, %, <code>-----</code>.</td>
   </tr>
   <tr>
     <th rowspan="2">Частота CPU</th>
-    <td><code>$cpucl$</code></td>
+    <td><code>$cpucl</code></td>
     <td>Средняя частота CPU, МГц, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$cpuclN$</code></td>
+    <td><code>$cpuclN</code></td>
     <td>Частота CPU для ядра N, МГц, <code>----</code>.</td>
   </tr>
   <tr>
     <th rowspan="1">Температура</th>
-    <td><code>$tempN$</code></td>
-    <td>Температура для датчика N, &deg;C, <code>----</code>. Пример: <code>$temp0$</code></td>
+    <td><code>$tempN</code></td>
+    <td>Температура для датчика N, <code>----</code>. Пример: <code>$temp0</code></td>
   </tr>
   <tr>
     <th rowspan="1">GPU</th>
-    <td><code>$gpu$</code></td>
+    <td><code>$gpu</code></td>
     <td>Использование GPU, %, <code>-----</code>. <code>aticonfig</code> или <code>nvidia-smi</code> должны быть установлены.</td>
   </tr>
   <tr>
     <th rowspan="1">Температура GPU</th>
-    <td><code>$gputemp$</code></td>
-    <td>Температура GPU, &deg;C, <code>----</code>. <code>aticonfig</code> или <code>nvidia-smi</code> должны быть установлены.</td>
+    <td><code>$gputemp</code></td>
+    <td>Температура GPU, <code>----</code>. <code>aticonfig</code> или <code>nvidia-smi</code> должны быть установлены.</td>
   </tr>
   <tr>
     <th rowspan="9">Память</th>
-    <td><code>$mem$</code></td>
+    <td><code>$mem</code></td>
     <td>Использование RAM, %, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memmb$</code></td>
+    <td><code>$memmb</code></td>
     <td>Использование RAM, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memgb$</code></td>
+    <td><code>$memgb</code></td>
     <td>Использование RAM, GB, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memfreemb$</code></td>
+    <td><code>$memfreemb</code></td>
     <td>Свободная RAM, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memfreegb$</code></td>
+    <td><code>$memfreegb</code></td>
     <td>Свободная RAM, GB, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memtotmb$</code></td>
+    <td><code>$memtotmb</code></td>
     <td>RAM, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memtotgb$</code></td>
+    <td><code>$memtotgb</code></td>
     <td>RAM, GB, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memusedmb$</code></td>
+    <td><code>$memusedmb</code></td>
     <td>Занятая и кэшированная RAM, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$memusedgb$</code></td>
+    <td><code>$memusedgb</code></td>
     <td>Занятая и кэшированная RAM, GB, <code>----</code>.</td>
   </tr>
   <tr>
     <th rowspan="7">Swap</th>
-    <td><code>$swap$</code></td>
+    <td><code>$swap</code></td>
     <td>Использование swap, %, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$swapmb$</code></td>
+    <td><code>$swapmb</code></td>
     <td>Использование swap, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$swapgb$</code></td>
+    <td><code>$swapgb</code></td>
     <td>Использование swap, GB, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$swapfreemb$</code></td>
+    <td><code>$swapfreemb</code></td>
     <td>Свободный swap, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$swapfreegb$</code></td>
+    <td><code>$swapfreegb</code></td>
     <td>Свободный swap, GB, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$swaptotmb$</code></td>
+    <td><code>$swaptotmb</code></td>
     <td>swap, MB, <code>-----</code>.</td>
   </tr>
   <tr>
-    <td><code>$swaptotgb$</code></td>
+    <td><code>$swaptotgb</code></td>
     <td>swap, GB, <code>----</code>.</td>
   </tr>
   <tr>
     <th rowspan="7">HDD</th>
-    <td><code>$hddN$</code></td>
-    <td>Занятость точки монтирования N, %, <code>-----</code>. Пример: <code>$hdd0$</code>.</td>
+    <td><code>$hddN</code></td>
+    <td>Занятость точки монтирования N, %, <code>-----</code>. Пример: <code>$hdd0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddmbN$</code></td>
-    <td>Занятость точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddmb0$</code>.</td>
+    <td><code>$hddmbN</code></td>
+    <td>Занятость точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddmb0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddgbN$</code></td>
-    <td>Занятость точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddgb0$</code>.</td>
+    <td><code>$hddgbN</code></td>
+    <td>Занятость точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddgb0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddfreembN$</code></td>
-    <td>Свободное место точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddfreemb0$</code>.</td>
+    <td><code>$hddfreembN</code></td>
+    <td>Свободное место точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddfreemb0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddfreegbN$</code></td>
-    <td>Свободное место точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddfreegb0$</code>.</td>
+    <td><code>$hddfreegbN</code></td>
+    <td>Свободное место точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddfreegb0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddtotmbN$</code></td>
-    <td>Размер точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddtotmb0$</code>.</td>
+    <td><code>$hddtotmbN</code></td>
+    <td>Размер точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddtotmb0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddtotgbN$</code></td>
-    <td>Размер точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddtotgb0$</code>.</td>
+    <td><code>$hddtotgbN</code></td>
+    <td>Размер точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddtotgb0</code>.</td>
   </tr>
   <tr>
     <th rowspan="2">Скорость HDD</th>
-    <td><code>$hddrN$</code></td>
-    <td>Скорость записи диска N, KB/s, <code>-----</code>. Пример: <code>$hddr0$</code>.</td>
+    <td><code>$hddrN</code></td>
+    <td>Скорость записи диска N, KB/s, <code>-----</code>. Пример: <code>$hddr0</code>.</td>
   </tr>
   <tr>
-    <td><code>$hddwN$</code></td>
-    <td>Скорость чтения диска N, KB/s, <code>-----</code>. Пример: <code>$hddw0$</code>.</td>
+    <td><code>$hddwN</code></td>
+    <td>Скорость чтения диска N, KB/s, <code>-----</code>. Пример: <code>$hddw0</code>.</td>
   </tr>
   <tr>
     <th rowspan="1">Температура HDD</th>
-    <td><code>$hddtempN$</code></td>
-    <td>Температура HDD с номером N, &deg;C, <code>----</code>. Пример <code>$hddtemp0$</code>. <code>hddtemp</code> должен быть установлен.</td>
+    <td><code>$hddtempN</code></td>
+    <td>Температура HDD с номером N, <code>----</code>. Пример <code>$hddtemp0</code>. <code>hddtemp</code> должен быть установлен.</td>
   </tr>
   <tr>
     <th rowspan="3">Сеть</th>
-    <td><code>$down$</code></td>
+    <td><code>$down</code></td>
     <td>Скорость загрузки, KB/s, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$up$</code></td>
+    <td><code>$up</code></td>
     <td>Скорость отдачи, KB/s, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$netdev$</code></td>
+    <td><code>$netdev</code></td>
     <td>Текущее устройство.</td>
   </tr>
   <tr>
     <th rowspan="2">Батарея</th>
-    <td><code>$bat$</code></td>
+    <td><code>$bat</code></td>
     <td>Заряд батареи, %, <code>---</code>.</td>
   </tr>
   <tr>
-    <td><code>$ac$</code></td>
+    <td><code>$ac</code></td>
     <td>Статус зарядного устройства. Возвращает <code>(*)</code>, если устройство подключено, или <code>( )</code>, если нет.</td>
   </tr>
   <tr>
     <th rowspan="5">Музыкальный плеер</th>
-    <td><code>$album$</code></td>
+    <td><code>$album</code></td>
     <td>Альбом текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</td>
   </tr>
   <tr>
-    <td><code>$artist$</code></td>
+    <td><code>$artist</code></td>
     <td>Исполнитель текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</td>
   </tr>
   <tr>
-    <td><code>$duration$</code></td>
+    <td><code>$duration</code></td>
     <td>Длительность текущей пени. Один из поддерживаемых музыкальных плееров должен быть установлен.</td>
   </tr>
   <tr>
-    <td><code>$progress$</code></td>
+    <td><code>$progress</code></td>
     <td>Прогресс текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</td>
   </tr>
   <tr>
-    <td><code>$title$</code></td>
+    <td><code>$title</code></td>
     <td>Название текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</td>
   </tr>
   <tr>
     <th rowspan="3">Процессы</th>
-    <td><code>$ps$</code></td>
+    <td><code>$ps</code></td>
     <td>Список запущенных процессов, разделенных запятой.</td>
   </tr>
   <tr>
-    <td><code>$pscount$</code></td>
+    <td><code>$pscount</code></td>
     <td>Число запущенных процессов.</td>
   </tr>
   <tr>
-    <td><code>$pstotal$</code></td>
+    <td><code>$pstotal</code></td>
     <td>Общее число процессов.</td>
   </tr>
   <tr>
     <th rowspan="1">Пакетный менеджер</th>
-    <td><code>$pkgcountN$</code></td>
+    <td><code>$pkgcountN</code></td>
     <td>Число пакетов, доступных для обновления, для команды N.</td>
   </tr>
   <tr>
     <th rowspan="1">Своя команда</th>
-    <td><code>$customN$</code></td>
-    <td>Получить данные из указанной команды N. Например, <code>$custom0$</code>.</td>
+    <td><code>$customN</code></td>
+    <td>Получить данные из указанной команды N. Например, <code>$custom0</code>.</td>
   </tr>
   <tr>
     <th rowspan="3">Рабочий стол</th>
-    <td><code>$desktop$</code></td>
+    <td><code>$desktop</code></td>
     <td>Имя текущего рабочего стола.</td>
   </tr>
   <tr>
-    <td><code>$ndesktop$</code></td>
+    <td><code>$ndesktop</code></td>
     <td>Номер текущего рабочего стола.</td>
   </tr>
   <tr>
-    <td><code>$tdesktops$</code></td>
+    <td><code>$tdesktops</code></td>
     <td>Общее число рабочих столов.</td>
   </tr>
 </table>
@@ -423,67 +423,67 @@ sudo make install
 <p><b>Свой формат времени:</b></p>
 <table>
   <tr>
-    <td><code>$dddd$</code></td>
+    <td><code>$dddd</code></td>
     <td>Длинный день недели.</td>
   </tr>
   <tr>
-    <td><code>$ddd$</code></td>
+    <td><code>$ddd</code></td>
     <td>Короткий день недели.</td>
   </tr>
   <tr>
-    <td><code>$dd$</code></td>
+    <td><code>$dd</code></td>
     <td>День.</td>
   </tr>
   <tr>
-    <td><code>$d$</code></td>
+    <td><code>$d</code></td>
     <td>День без нуля.</td>
   </tr>
   <tr>
-    <td><code>$MMMM$</code></td>
+    <td><code>$MMMM</code></td>
     <td>Месяц в длинном формате.</td>
   </tr>
   <tr>
-    <td><code>$MMM$</code></td>
+    <td><code>$MMM</code></td>
     <td>Месяц в коротком формате.</td>
   </tr>
   <tr>
-    <td><code>$MM$</code></td>
+    <td><code>$MM</code></td>
     <td>Месяц.</td>
   </tr>
   <tr>
-    <td><code>$M$</code></td>
+    <td><code>$M</code></td>
     <td>Месяц без нуля.</td>
   </tr>
   <tr>
-    <td><code>$yyyy$</code></td>
+    <td><code>$yyyy</code></td>
     <td>Год.</td>
   </tr>
   <tr>
-    <td><code>$yy$</code></td>
+    <td><code>$yy</code></td>
     <td>Год в коротком формате.</td>
   </tr>
   <tr>
-    <td><code>$hh$</code></td>
+    <td><code>$hh</code></td>
     <td>Часы.</td>
   </tr>
   <tr>
-    <td><code>$h$</code></td>
+    <td><code>$h</code></td>
     <td>Часы без нуля.</td>
   </tr>
   <tr>
-    <td><code>$mm$</code></td>
+    <td><code>$mm</code></td>
     <td>Минуты.</td>
   </tr>
   <tr>
-    <td><code>$m$</code></td>
+    <td><code>$m</code></td>
     <td>Минуты без нуля.</td>
   </tr>
   <tr>
-    <td><code>$ss$</code></td>
+    <td><code>$ss</code></td>
     <td>Секунды.</td>
   </tr>
   <tr>
-    <td><code>$s$</code></td>
+    <td><code>$s</code></td>
     <td>Секунды без нуля.</td>
   </tr>
 </table>
@@ -491,27 +491,27 @@ sudo make install
 <p><b>Свой формат времени работы:</b></p>
 <table>
   <tr>
-    <td><code>$dd$</code></td>
+    <td><code>$dd</code></td>
     <td>Дни аптайма.</td>
   </tr>
   <tr>
-    <td><code>$d$</code></td>
+    <td><code>$d</code></td>
     <td>Дни аптайма без нуля.</td>
   </tr>
   <tr>
-    <td><code>$hh$</code></td>
+    <td><code>$hh</code></td>
     <td>Часы аптайма.</td>
   </tr>
   <tr>
-    <td><code>$h$</code></td>
+    <td><code>$h</code></td>
     <td>Часы аптайма без нуля.</td>
   </tr>
   <tr>
-    <td><code>$mm$</code></td>
+    <td><code>$mm</code></td>
     <td>Минуты аптайма.</td>
   </tr>
   <tr>
-    <td><code>$m$</code></td>
+    <td><code>$m</code></td>
     <td>Минуты аптайма без 0.</td>
   </tr>
 </table>
@@ -612,24 +612,24 @@ sudo make install
 <p><b>Теги шаблона</b></p>
 <table>
   <tr>
-    <td><code>$mark$</code></td>
+    <td><code>$mark</code></td>
     <td>Показать метку, если данный рабочий стол активен.</td>
   </tr>
   <tr>
-    <td><code>$name$</code></td>
+    <td><code>$name</code></td>
     <td>Имя рабочего стола.</td>
   </tr>
   <tr>
-    <td><code>$number$</code></td>
+    <td><code>$number</code></td>
     <td>Номер рабочего стола.</td>
   </tr>
   <tr>
-    <td><code>$total$</code></td>
+    <td><code>$total</code></td>
     <td>Общее число рабочих столов.</td>
   </tr>
 </table>
 
-<p><b>Команда:</b> Введите команду, которая будет запущена по клику левой кнопкой мыши на выбранном рабочем столе. Доступны те же переменные, что и для шаблонов. По умолчанию <code>dbus org.kde.kwin /KWin setCurrentDesktop $number$</code>.</p>
+<p><b>Команда:</b> Введите команду, которая будет запущена по клику левой кнопкой мыши на выбранном рабочем столе. Доступны те же переменные, что и для шаблонов. По умолчанию <code>dbus org.kde.kwin /KWin setCurrentDesktop $number</code>.</p>
 
 <p><b>Скрытие панелей:</b> Выберите панели, которые будут скрыты при нажатии на горячую клавишу.</p>
 <!-- end of config block -->
