--- a/ru/_posts/2014-09-04-migration-to-v2.html
+++ b/ru/_posts/2014-09-04-migration-to-v2.html
@@ -24,6 +24,8 @@ description: <figure class="img"><img src="/resources/papers/broken-computer.jpg
   <li>Переписка основного виджета на <code>С++</code>, что вызвало переименование проекта в <b>Awesome Widgets</b>, а главного виджета в <b>Awesome Widget</b></li>
   <li>Настройки файлов батареи и адаптора питания <b>вынесены в DataEngine</b>.</li>
   <li><b>Убраны поля</b>. Теперь виджет представляет собой монолитное поле. Текст настраивается в специальном браузере.</li>
+  <li>В связи с удалением отдельных полей, тултип теперь <b>настраивается отдельно</b>.</li>
+  <li>Настройка выравнивания текста теперь может быть осуществлена только с использованием HTML тегов.</li>
   <li>В связи с объединением полей, несколько тегов были переименованы:
   <ul>
     <li><code>custom</code> (время) -&gt; <code>ctime</code></li>
@@ -31,7 +33,6 @@ description: <figure class="img"><img src="/resources/papers/broken-computer.jpg
     <li><code>time</code> (плеер) -&gt; <code>duration</code></li>
   </ul>
   </li>
-  <li>В связи с удалением отдельных полей, тултип теперь <b>настраивается отдельно</b>.</li>
 </ul>
 
 <p>По любым проблемам, связанным с миграцией, не стесняйтесь оставлять здесь комментарий.</p>
