--- a/_posts/2014-09-04-migration-to-v2.html
+++ b/_posts/2014-09-04-migration-to-v2.html
@@ -24,6 +24,8 @@ description: <figure class="img"><img src="/resources/papers/broken-computer.jpg
   <li>The main widget was rewritten to <code>С++</code>, so the project was renamed to <b>Awesome Widgets</b>, and the main widget was done to <b>Awesome Widget</b></li>
   <li>Configuration of battery and AC files <b>was moved to DataEngine</b>.</li>
   <li><b>The labels was removed</b>. Now the widget is a single label. You may set up text in the special browser.</li>
+  <li>According to removal of the label, tooltip <b>should be configured separately</b>.</li>
+  <li>Align of text now can be configured only by using HTML tags.</li>
   <li>According to fields combining several tags were renamed:
   <ul>
     <li><code>custom</code> (time) -&gt; <code>ctime</code></li>
@@ -31,7 +33,6 @@ description: <figure class="img"><img src="/resources/papers/broken-computer.jpg
     <li><code>time</code> (player) -&gt; <code>duration</code></li>
   </ul>
   </li>
-  <li>According to removal of the label, tooltip <b>should be configured separately</b>.</li>
 </ul>
 
 <p>On any issues related to the migration, feel free to leave a comment here.</p>
