--- a/projects/index.html
+++ b/projects/index.html
@@ -31,7 +31,7 @@ groups:
             links:
                 - <a href="/projects/awesome-widgets" title="Homepage">Homepage</a>
                 - <a href="https://github.com/arcan1s/awesome-widgets" title="GitHub">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
                 - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
                 - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Archlinux AUR package</a>
           - title: DeadLine widget
