update aw pages

--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -12,6 +12,7 @@ developers:
     - Mermouy (French translation)
     - underr (Brazillian Portuguese translation)
     - Виктор Слободян (Ukrainian translation)
+    - Lemueler (Chinese translation)
 license: GPLv3
 links:
     - Plasmoid page on <a href="http://kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">kde-look.org</a>
@@ -209,6 +210,11 @@ sudo make install
     <th rowspan="1">Temperature</th>
     <td><code>$tempN</code></td>
     <td>Temperature for device N, <code>----</code>. For example, <code>$temp0</code>.</td>
+  </tr>
+  <tr>
+    <th rowspan="1">Fan</th>
+    <td><code>$fanN</code></td>
+    <td>Fan speed for device N, <code>----</code>. For example, <code>$fan0</code>.</td>
   </tr>
   <tr>
     <th rowspan="1">GPU</th>
