--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -13,6 +13,7 @@ developers:
     - Mermouy (перевод на французский)
     - underr (перевод на бразильский португальский)
     - Виктор Слободян (перевод на украинский)
+    - Lemueler (перевод на китайский)
 license: GPLv3
 links:
     - Страница плазмоида на <a href="http://kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">kde-look.org</a>
@@ -210,6 +211,11 @@ sudo make install
     <th rowspan="1">Температура</th>
     <td><code>$tempN</code></td>
     <td>Температура для датчика N, <code>----</code>. Пример: <code>$temp0</code></td>
+  </tr>
+  <tr>
+    <th rowspan="1">Кулер</th>
+    <td><code>$fanN</code></td>
+    <td>Скорость кулера N, <code>----</code>. Пример: <code>$fan0</code></td>
   </tr>
   <tr>
     <th rowspan="1">GPU</th>
