--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -103,12 +103,8 @@ sudo make install
 <h4><a href="#deoptions" class="anchor" id="deoptions"><span class="octicon octicon-link"></span></a>DataEngine options</h4>
 <table>
   <tr>
-    <th>AC</th>
-    <td>File with AC information. The file (<code>/sys/class/power_supply/AC/online</code> by default) should contain <code>1</code> if AC is online.</td>
-  </tr>
-  <tr>
-    <th>BATTERY</th>
-    <td>File with battery information. The file (<code>/sys/class/power_supply/BAT0/capacity</code> by default) should contain only battery charge in percent.</td>
+    <th>ACPIPATH</th>
+    <td>Path to ACPI devices. Default is <code>/sys/class/power_supply/</code>.</td>
   </tr>
   <tr>
     <th>CUSTOM</th>
@@ -350,8 +346,8 @@ sudo make install
   </tr>
   <tr>
     <th rowspan="2">Battery</th>
-    <td><code>$bat</code></td>
-    <td>Battery charge, %, <code>---</code>.</td>
+    <td><code>$batN</code></td>
+    <td>Battery N charge, %, <code>---</code>. <code>$bat0</code> is average value.</td>
   </tr>
   <tr>
     <td><code>$ac</code></td>
@@ -537,9 +533,7 @@ sudo make install
 <p>Since version 1.7.0 CPU, CPU clock, memory, swap, network and battery support graphical tooltip. To enable them just make the needed checkboxes a fully checked. The number of stored values can be set in the tab. Colors of graphs are configurable too.</p>
 
 <h4><a href="#deguiconf" class="anchor" id="deguiconf"><span class="octicon octicon-link"></span></a>DataEngine settings</h4>
-<p><b>AC device:</b> File with AC information. The file (<code>/sys/class/power_supply/AC/online</code> by default) should contain <code>1</code> if AC is online.</p>
-
-<p><b>Battery device:</b> File with battery information. The file (<code>/sys/class/power_supply/BAT0/capacity</code> by default) should contain only battery charge in percent.</p>
+<p><b>ACPI path:</b> Path to ACPI devices. The file <code>/sys/class/power_supply/</code>.</p>
 
 <p><b>Custom command:</b> Commands, which will be run for custom label. For example, <code>wget -qO- http://ifconfig.me/ip</code> will return external IP.</p>
 
