--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -104,12 +104,8 @@ sudo make install
 <h4><a href="#deoptions" class="anchor" id="deoptions"><span class="octicon octicon-link"></span></a>Опции DataEngine</h4>
 <table>
   <tr>
-    <th>AC</th>
-    <td>Файл с информацией об адапторе питания. Файл (<code>/sys/class/power_supply/AC/online</code> по умолчанию) должен содержать <code>1</code>, если адаптор подключен.</td>
-  </tr>
-  <tr>
-    <th>BATTERY</th>
-    <td>Файл с информацией о батарее. Файл (<code>/sys/class/power_supply/BAT0/capacity</code> по умолчанию) должен содержать только процент заряда батареи.</td>
+    <th>ACPIPATH</th>
+    <td>Путь к устройствам ACPI. По умолчанию <code>/sys/class/power_supply/</code>.</td>
   </tr>
   <tr>
     <th>CUSTOM</th>
@@ -351,8 +347,8 @@ sudo make install
   </tr>
   <tr>
     <th rowspan="2">Батарея</th>
-    <td><code>$bat</code></td>
-    <td>Заряд батареи, %, <code>---</code>.</td>
+    <td><code>$batN</code></td>
+    <td>Заряд батареи N, %, <code>---</code>. <code>$bat0</code> - среднее значение.</td>
   </tr>
   <tr>
     <td><code>$ac</code></td>
@@ -538,9 +534,7 @@ sudo make install
 <p>Начиная с версии 1.7.0, поля CPU, частота CPU, память, swap, сеть и батарея поддерживают графический тултип (всплывающая подсказка). Чтобы включить их, просто сделайте требуемые чекбоксы полностью чекнутыми. Число хранимых значений может быть установленно во вкладке. Цвета графиков настраиваются тоже.</p>
 
 <h4><a href="#deguiconf" class="anchor" id="deguiconf"><span class="octicon octicon-link"></span></a>Настройка DataEngine</h4>
-<p><b>Устройство AC:</b> Файл, содержащий информацию об адапторе питания. Данный файл (<code>/sys/class/power_supply/AC/online</code> по умолчанию) должен содержать <code>1</code>, если устройство подключено.</p>
-
-<p><b>Устройство батареи:</b> Файл, содержащий информацию о батарее. Данный файл (<code>/sys/class/power_supply/BAT0/capacity</code> по умолчанию) должен содержать только заряд батареи в %.</p>
+<p><b>Устройства ACPI:</b> Путь к устройствам ACPI. По умолчанию <code>/sys/class/power_supply/</code>.</p>
 
 <p><b>Своя команда:</b> Команды, которые будут запущены для соответствующего поля. Например, <code>wget -qO- http://ifconfig.me/ip</code> вернет внешний IP.</p>
 
