update aw pages

--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -345,9 +345,13 @@ sudo make install
     <td>Current network device.</td>
   </tr>
   <tr>
-    <th rowspan="2">Battery</th>
+    <th rowspan="3">Battery</th>
+    <td><code>$bat</code></td>
+    <td>Average battery charge, %, <code>---</code>.</td>
+  </tr>
+  <tr>
     <td><code>$batN</code></td>
-    <td>Battery N charge, %, <code>---</code>. <code>$bat0</code> is average value.</td>
+    <td>Battery N charge, %, <code>---</code>.</td>
   </tr>
   <tr>
     <td><code>$ac</code></td>
