--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -346,9 +346,13 @@ sudo make install
     <td>Текущее устройство.</td>
   </tr>
   <tr>
-    <th rowspan="2">Батарея</th>
+    <th rowspan="3">Батарея</th>
+    <td><code>$bat</code></td>
+    <td>Средний заряд батареи, %, <code>---</code>.</td>
+  </tr>
+  <tr>
     <td><code>$batN</code></td>
-    <td>Заряд батареи N, %, <code>---</code>. <code>$bat0</code> - среднее значение.</td>
+    <td>Заряд батареи N, %, <code>---</code>.</td>
   </tr>
   <tr>
     <td><code>$ac</code></td>
