update netctlgui pages

--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -8,6 +8,7 @@ hasgui: true
 hasdocs: true
 developers:
     - Evgeniy Alekseev
+    - @nosada (Japanese translation)
 license: GPLv3
 links:
     - Page on <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
