--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -9,6 +9,7 @@ hasgui: true
 hasdocs: true
 developers:
     - Evgeniy Alekseev
+    - @nosada (перевод на японский)
 license: GPLv3
 links:
     - Страница на <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
