--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ title: arcanis' homepage
           </span>
         </label>
         <p class="view"><a href="/projects/" title="Projects">Projects</a><br>
-        <a href="ftp://repo.arcanis.name/repo" title="Repository">Repository</a></p>
+        <a href="ftp://repo.arcanis.name/repo" title="Repository">Repository</a>
+        <a href="http://ws.audioscrobbler.com/2.0/user/DarkArcanis/newreleases.rss" title="LFM RSS">Last releases</a></p>
         <p class="view"><a href="/about" title="About">About me</a></p>
 
         {% include cse.html %}
