--- a/ru/index.html
+++ b/ru/index.html
@@ -24,7 +24,7 @@ title: arcanis
           </span>
         </label>
         <p class="view"><a href="/ru/projects/" title="Проекты">Проекты</a><br>
-        <a href="ftp://repo.arcanis.name/repo" title="Репозиторий">Репозиторий</a>
+        <a href="ftp://repo.arcanis.name/repo" title="Репозиторий">Репозиторий</a><br>
         <a href="http://ws.audioscrobbler.com/2.0/user/DarkArcanis/newreleases.rss" title="LFM RSS">Последние релизы</a></p>
         <p class="view"><a href="/ru/about" title="Обо мне">Обо мне</a></p>
 
