--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -108,14 +108,6 @@ sudo make install
     <td>Путь к устройствам ACPI. По умолчанию <code>/sys/class/power_supply/</code>.</td>
   </tr>
   <tr>
-    <th>CUSTOM</th>
-    <td>Свои команды для запуска. По умолчанию <code>wget -qO- http://ifconfig.me/ip</code>. Разделитель <code>@@</code>.</td>
-  </tr>
-  <tr>
-    <th>DESKTOPCMD</th>
-    <td>Комадна, которая определяет текущий рабочий стол. По умолчанию <code>qdbus org.kde.kwin /KWin currentDesktop</code>.</td>
-  </tr>
-  <tr>
     <th>GPUDEV</th>
     <td>Устанавливает тип GPU. Может быть <code>nvidia</code> (для nVidia), <code>ati</code> (для ATI Radeon), <code>disable</code> или <code>auto</code>. По умолчанию <code>auto</code>.</td>
   </tr>
@@ -534,15 +526,13 @@ sudo make install
 
 <p><b>AC offline тег:</b> Строка, которая будет показана, когда AC оффлайн. По умолчанию <code>( )</code>.</p>
 
+<p><b>Проверять обновления:</b> Проверять или нет обновления при запуске. По умолчанию <code>проверять</code>.</p>
+
 <h4><a href="#tooltips" class="anchor" id="tooltips"><span class="octicon octicon-link"></span></a>Тултипы</h4>
-<p>Начиная с версии 1.7.0, поля CPU, частота CPU, память, swap, сеть и батарея поддерживают графический тултип (всплывающая подсказка). Чтобы включить их, просто сделайте требуемые чекбоксы полностью чекнутыми. Число хранимых значений может быть установленно во вкладке. Цвета графиков настраиваются тоже.</p>
+<p>Начиная с версии 1.7.0, поля CPU, частота CPU, память, swap, сеть и батарея поддерживают графический тултип (всплывающая подсказка). Чтобы включить их, просто сделайте требуемые чекбоксы полностью чекнутыми. Число хранимых значений может быть установлено во вкладке. Цвета графиков настраиваются тоже.</p>
 
 <h4><a href="#deguiconf" class="anchor" id="deguiconf"><span class="octicon octicon-link"></span></a>Настройка DataEngine</h4>
 <p><b>Устройства ACPI:</b> Путь к устройствам ACPI. По умолчанию <code>/sys/class/power_supply/</code>.</p>
-
-<p><b>Своя команда:</b> Команды, которые будут запущены для соответствующего поля. Например, <code>wget -qO- http://ifconfig.me/ip</code> вернет внешний IP.</p>
-
-<p><b>Комадна для определения рабочего стола</b> Введите команду, которая будет запущеная для desktop DataEngine. По умолчанию <code>qdbus org.kde.kwin /KWin currentDesktop</code>.</p>
 
 <p><b>Устройство GPU:</b> Выберете одно из поддерживаемых устройств GPU. <code>auto</code> включит автоматическое определение устройства, <code>disable</code> отключит все мониторы GPU. По умолчанию <code>auto</code>.</p>
 
@@ -605,7 +595,11 @@ sudo make install
 
 <p><b>Вертикальная разметка:</b> Использовать вертикальную разметку вместо горизонтальной.</p>
 
-<p><b>Добавить пустое пространство:</b> Добавить пустое пространство в указанное место виджета.</p>
+<p><b>Включить тултип:</b> Включать или нет графическое превью выбранного рабочего стола. Вы также должны указать тип превью, по умолчанию <code>Окна</code>.</p>
+
+<p><b>Ширина тултипа:</b> Ширина тултипа в пикселях. По умолчанию <code>200px</code>.</p>
+
+<p><b>Цвет границ окна:</b> Цвет рамок окон в тултипе "Контуры". По умолчанию <code>#ffffff</code>.</p>
 
 <p><b>Метка</b> Введите символ (или строку), которая будет показана, если данный рабочий стол сейчас активен.</p>
 
@@ -614,6 +608,10 @@ sudo make install
   <tr>
     <td><code>$mark</code></td>
     <td>Показать метку, если данный рабочий стол активен.</td>
+  </tr>
+  <tr>
+    <td><code>$fullmark</code></td>
+    <td>Также, как и <code>$mark</code>, но показывать пустое место.</td>
   </tr>
   <tr>
     <td><code>$name</code></td>
@@ -628,8 +626,6 @@ sudo make install
     <td>Общее число рабочих столов.</td>
   </tr>
 </table>
-
-<p><b>Команда:</b> Введите команду, которая будет запущена по клику левой кнопкой мыши на выбранном рабочем столе. Доступны те же переменные, что и для шаблонов. По умолчанию <code>dbus org.kde.kwin /KWin setCurrentDesktop $number</code>.</p>
 
 <p><b>Скрытие панелей:</b> Выберите панели, которые будут скрыты при нажатии на горячую клавишу.</p>
 <!-- end of config block -->
