--- a/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -5,7 +5,7 @@ hastr: true
 layout: paper
 tags: awesome-widgets, pytextmonitor
 title: Awesome Widgets 2.1: bells and whistles
-short: aw-2.1-bells-and-whistles
+short: aw-v21-bells-and-whistles
 description: The paper deals with settings of a custom scripts and graphical bars in the new version of Awesome Widgets (2.1).
 ---
 <h2><a href="#intro" class="anchor" id="intro"><span class="octicon octicon-link"></span></a>Introduction</h2>
