--- a/ru/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/ru/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -5,7 +5,7 @@ hastr: true
 layout: paper
 tags: awesome-widgets, pytextmonitor
 title: Awesome Widgets 2.1: свистелки и перделки
-short: aw-2.1-bells-and-whistles
+short: aw-v21-bells-and-whistles
 description: Данная статья посвящена обсуждению настройки своих скриптов и графических баров в новой версии Awesome Widgets (2.1).
 ---
 <h2><a href="#intro" class="anchor" id="intro"><span class="octicon octicon-link"></span></a>Введение</h2>
