--- a/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -4,7 +4,7 @@ type: paper
 hastr: true
 layout: paper
 tags: awesome-widgets, pytextmonitor
-title: Awesome Widgets 2.1: bells and whistles
+title: Awesome Widgets 2.1 - bells and whistles
 short: aw-v21-bells-and-whistles
 description: The paper deals with settings of a custom scripts and graphical bars in the new version of Awesome Widgets (2.1).
 ---
