--- a/ru/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/ru/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -4,7 +4,7 @@ type: paper
 hastr: true
 layout: paper
 tags: awesome-widgets, pytextmonitor
-title: Awesome Widgets 2.1: свистелки и перделки
+title: Awesome Widgets 2.1 - свистелки и перделки
 short: aw-v21-bells-and-whistles
 description: Данная статья посвящена обсуждению настройки своих скриптов и графических баров в новой версии Awesome Widgets (2.1).
 ---
