update netctl-gui to 1.4.0

--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -89,7 +89,7 @@ groups:
                 - <a href="https://github.com/arcan1s/julius-actions" title="GitHub">Репозиторий на GitHub</a>
           - title: Netctl GUI
             short: netctl-gui
-            description: <code>Netctl GUI</code> графическая оболочка для <code>netctl</code> (набор скриптов для поднятия сети в Arch'е). Написан на <code>CPP</code> с использованием библиотеки <code>Qt4</code>. На текущим момент умеет работать с профилями, в том числе создавать новые, а также умеет подключаться к WiFi. Также предоставляет виджет и DataEngine для KDE.
+            description: <code>Netctl GUI</code> графическая оболочка для <code>netctl</code> (набор скриптов для поднятия сети в Arch'е). Написан на <code>C++</code> с использованием библиотеки <code>Qt</code>. На текущим момент умеет работать с профилями, в том числе создавать новые, а также умеет подключаться к WiFi. Также предоставляет виджет и DataEngine для KDE4/KF5.
             links:
                 - <a href="/ru/projects/netctl-gui" title="Домашняя страница">Домашняя страница</a>
                 - <a href="https://github.com/arcan1s/netctl-gui" title="GitHub">Репозиторий на GitHub</a>
