--- a/projects/index.html
+++ b/projects/index.html
@@ -88,7 +88,7 @@ groups:
                 - <a href="https://github.com/arcan1s/julius-actions" title="GitHub">GitHub repo</a>
           - title: Netctl GUI
             short: netctl-gui
-            description: <code>Netctl GUI</code> graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>CPP</code> using <code>Qt4</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a widget and DataEngine for KDE.
+            description: <code>Netctl GUI</code> graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>C++</code> using <code>Qt</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a widget and DataEngine for KDE4/KF5.
             links:
                 - <a href="/projects/netctl-gui" title="Homepage">Homepage</a>
                 - <a href="https://github.com/arcan1s/netctlplasmoid" title="GitHub">GitHub repo</a>
