--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -19,7 +19,7 @@ links:
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
-<p>Graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>CPP</code> using <code>Qt4</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a Qt library for interaction with netctl and widget and DataEngine for KDE.</p>
+<p>Graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>C++</code> using <code>Qt</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a Qt library for interaction with netctl and widget and DataEngine for KDE4/KF5.</p>
 
 <p><b>NOTE:</b> <a href="https://github.com/arcan1s/netctl-gui/issues/3" title="Ticket">LOOKING FOR TRANSLATORS!</a></p>
 
@@ -120,6 +120,7 @@ Available cmake flags are:
       <li><code>-DDBUS_SYSTEMCONF_PATH=/etc/dbus-1/system.d/</code> - path to DBus system configuration files</li>
       <li><code>-DSYSTEMD_SERVICE_PATH=lib/systemd/system</code> - path to systemd services</li>
       <li><code>-DUSE_CAPABILITIES:BOOL=0</code> - do not use setcap to get privileges to the helper</li>
+      <li><code>-DBUILD_KDE4:BOOL=1</code> - build plasmoid under KDE4 instead of KF5</li>
       <li><code>-DUSE_QT5:BOOL=0</code> - use Qt4 instead of Qt5 for GUI</li>
     </ul></li>
   </ul></li>
@@ -133,7 +134,8 @@ Available cmake flags are:
   <li>automoc4 <i>(make)</i></li>
   <li>cmake <i>(make)</i></li>
   <li>qt5-tools <i>(make, if Qt5 is used)</i></li>
-  <li>kdebase-workspace <i>(optional, widget)</i></li>
+  <li>kdebase-workspace <i>(optional, KDE4 widget)</i></li>
+  <li>plasma-frameworks <i>(optional, KF5 widget)</i></li>
   <li>sudo <i>(optional, sudo support)</i></li>
   <li>wpa_supplicant <i>(optional, WiFi support)</i></li>
 </ul>
@@ -150,8 +152,14 @@ Available cmake flags are:
 <ul>
   <li><code>$HOME/.config/netctl-gui.conf</code> - GUI/helper user configuration</li>
   <li><code>/etc/netctl-gui.conf</code> - helper system-wide configuration</li>
-  <li><code>$KDEHOME/share/config/netctl.conf</code> - DataEngine user configuration</li>
-  <li><code>$KDESYSTEM/share/config/netctl.conf</code> - DataEngine system-wide configuration</li>
+  <ul>
+    <li><code>$KDEHOME/share/config/plasma-dataengine-netctl.conf</code> - DataEngine user configuration</li>
+    <li><code>$KDESYSTEM/share/config/plasma-dataengine-netctl.conf</code> - DataEngine system-wide configuration</li>
+  </ul>
+  <ul>
+    <li><code>$HOME/.config/plasma-dataengine-netctl.conf</code> - DataEngine user configuration</li>
+    <li><code>/etc/xdg/plasma-dataengine-netctl.conf</code> - DataEngine system-wide configuration</li>
+  </ul>
 </ul>
 <!-- end of config block -->
 
