add links to openSUSE packages

--- a/projects/index.html
+++ b/projects/index.html
@@ -34,6 +34,7 @@ groups:
                 - <a href="http://kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
                 - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
                 - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Archlinux AUR package</a>
+                - <a href="http://software.opensuse.org/package/awesome-widgets" title="openSUSE">openSUSE package</a>
           - title: DeadLine widget
             short: deadline
             description: <code>DeadLine widget</code> is a Plasmoid script written on <code>Python2</code>. It is able to create jobs, and add reminders to them. Now this project has a pre-alpha stage. Someday maybe I will complete it.
