--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -19,6 +19,7 @@ groups:
                 - <a href="http://kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">Страница плазмоида на kde-look.org</a>
                 - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">Страница DataEngine на kde-look.org</a>
                 - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Пакет в AUR</a>
+                - <a href="http://software.opensuse.org/package/awesome-widgets" title="openSUSE">Пакет для openSUSE</a>
           - title: DeadLine widget
             short: deadline
             description: <code>DeadLine widget</code> плазмоид, написанный на <code>Python2</code>. Может создавать задачи и добавлять напоминания к ним. Сейчас этот проект находится в состоянии пре-альфа. Может быть когда-нибудь я доделаю его.
